appId: hieunguyen130701iuh.com.ruby.sgpmobile
---
- runFlow: "common-ensure-login-screen.yaml"

# Login -> Home
- tapOn: "Email hoặc ID nhân viên"
- inputText: "admin"
- pressKey: Enter
- inputText: "000000"
- pressKey: Enter
- extendedWaitUntil:
      visible: "Industrial Manager"
      timeout: 50000
- runFlow:
      when:
          visible: "Open debugger to view warnings."
      commands:
        - tapOn:
              point: "94%,93%"

# Switch to light mode in Settings
- swipe:
      direction: UP
- tapOn:
      point: "25%,83%"
- extendedWaitUntil:
      visible: "API Base URL"
      timeout: 30000
- swipe:
      direction: UP
- tapOn: ".*Sáng"
- extendedWaitUntil:
      visible: "Chế độ sáng"
      timeout: 30000

# Back to Home
- tapOn:
      point: "8%,11%"
- extendedWaitUntil:
      visible: "Industrial Manager"
      timeout: 30000

# Logout -> Login screenshot in light mode
- swipe:
      direction: UP
- runFlow:
      when:
          visible: "Open debugger to view warnings."
      commands:
        - tapOn:
              point: "94%,93%"
- tapOn:
      point: "74%,83%"
- extendedWaitUntil:
      visible: "Tài khoản"
      timeout: 30000
- swipe:
      direction: UP
- swipe:
      direction: UP
- tapOn: "Đăng xuất"
- extendedWaitUntil:
      visible: "Đăng xuất?"
      timeout: 30000
- tapOn: "Đăng xuất"
- extendedWaitUntil:
      visible: "Quên mật khẩu?"
      timeout: 30000
- takeScreenshot: "docs/screenshots/output/latest/22-login-light"
