appId: hieunguyen130701iuh.com.ruby.sgpmobile
---
- runFlow: "common-open-settings.yaml"
- swipe:
    direction: UP
- swipe:
    direction: UP
- tapOn: "Đặt lại mặc định"
- extendedWaitUntil:
    visible: "Bạn có chắc chắn muốn tiếp tục?"
    timeout: 30000
- tapOn: "Xác nhận"
- extendedWaitUntil:
    visible: "Đã đặt lại thành công"
    timeout: 30000
- tapOn: "Tải lại dữ liệu"
- extendedWaitUntil:
    visible: "Đang kiểm tra dữ liệu"
    timeout: 30000
